create password validation.

--- a/app/src/main/res/layout/activity_create_account_page.xml
+++ b/app/src/main/res/layout/activity_create_account_page.xml
@@ -12,7 +12,7 @@
         android:layout_width="223dp"
         android:layout_height="81dp"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="50dp"
         android:fontFamily="@font/tahu"
         android:text="Sign Up"
         android:textColor="@color/fontBlack"
@@ -40,7 +40,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:boxBackgroundMode="none"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="5dp"
+        app:helperText="Required*"
+        app:helperTextTextColor="@color/red"
         app:layout_constraintBottom_toTopOf="@id/layoutEmail"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -72,7 +74,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:boxBackgroundMode="none"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="5dp"
+        app:helperText="Required*"
+        app:helperTextTextColor="@color/red"
         app:layout_constraintBottom_toTopOf="@id/layoutUser"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -92,6 +96,7 @@
             android:textColor="@color/white"
             android:textColorHint="@color/white"
             android:textSize="16sp"
+            android:inputType="textEmailAddress"
             tools:ignore="TouchTargetSizeCheck"
             android:fontFamily="@font/alegreya_sans"
             android:drawableLeft="@drawable/ic_baseline_email_24"
@@ -104,7 +109,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:boxBackgroundMode="none"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="5dp"
+        app:helperText="Required*"
+        app:helperTextTextColor="@color/red"
         app:layout_constraintBottom_toTopOf="@id/layoutPass"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -137,6 +144,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:boxBackgroundMode="none"
+        app:helperText="Required*"
+        app:helperTextTextColor="@color/red"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -177,7 +186,9 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/layoutPass"
         app:layout_constraintWidth_percent=".7"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
+        app:helperText="Required*"
+        app:helperTextTextColor="@color/red"
         app:passwordToggleEnabled="true"
         app:passwordToggleTint="@color/white"
         app:hintEnabled="false">
