--- a/app/src/main/res/layout/activity_create_account_page.xml
+++ b/app/src/main/res/layout/activity_create_account_page.xml
@@ -241,7 +241,7 @@
 
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/loginButton"
+        android:id="@+id/singupButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
